[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Łuczak <piotrluczak1995@gmail.com>"]

[workspace]
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"
